<?xml version="1.0" encoding="utf-8" ?>

<resources>
    <string name="app_name">問合せ</string>
    <string name="tv_msg">必要な情報を入力し、送信ボタンをクリックしてください。</string>

    <string name="name">お名前</string>
    <string name="nameInput"></string>

    <string name="mail">メールアドレス</string>
    <string name="mailInput"></string>

    <string name="question">お問い合わせ内容</string>
    <string name="questionInput"></string>

    <string name="bt_save">送信</string>

</resources>